typescript/checker/tests/conformance/classes/members/accessibility/protectedClassPropertyAccessibleWithinSubclass2.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            3571,
        ),
        hi: BytePos(
            3572,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/accessibility/protectedClassPropertyAccessibleWithinSubclass2.ts:84:5
   |
84 | var b: Base;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            3585,
        ),
        hi: BytePos(
            3587,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/accessibility/protectedClassPropertyAccessibleWithinSubclass2.ts:85:5
   |
85 | var d1: Derived1;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            3604,
        ),
        hi: BytePos(
            3606,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/accessibility/protectedClassPropertyAccessibleWithinSubclass2.ts:86:5
   |
86 | var d2: Derived2;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            3623,
        ),
        hi: BytePos(
            3625,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/accessibility/protectedClassPropertyAccessibleWithinSubclass2.ts:87:5
   |
87 | var d3: Derived3;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            3642,
        ),
        hi: BytePos(
            3644,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/accessibility/protectedClassPropertyAccessibleWithinSubclass2.ts:88:5
   |
88 | var d4: Derived4;
   |     ^^

